# xdna-emu

./: .git-blame-ignore-revs  .gitignore  .lsp.json  .mcp.json  CLAUDE.md  Cargo.toml  LICENSE  NEXT-STEPS.md  README.md  ROADMAP.md  TOMORROW.md  TRACE-STRATEGY.md  aie.xclbin  build.rs  k1.o.lst  k2.o.lst  k3.o.lst  libvmac_hw.rlib  libvmac_routing_v3.rlib  raw  runner.toml  rust-analyzer.toml  rustfmt.toml  scalar_ops.patch  xdna-emu.toml
.cargo/: config.toml
.claude/: settings.json
aie.mlir.prj/: input_with_addresses.mlir  main_aie_partition.json  main_core_0_2.bcf  main_core_0_2.chesslinked.ll  main_core_0_2.elf  main_core_0_2.elf.calltree  main_core_0_2.elf.lst  main_core_0_2.elf.map  main_core_0_2.elf.sdr  main_core_0_2.elf.srv  main_core_0_2.ll  main_core_0_2.o.lst  main_design.bif
aie_traced.mlir.prj/: input_with_addresses.mlir  main_aie_partition.json  main_core_0_0_2.chesshack.ll  main_core_0_2.bcf  main_core_0_2.chesslinked.ll  main_core_0_2.elf  main_core_0_2.elf.calltree  main_core_0_2.elf.cmic2  main_core_0_2.elf.lst  main_core_0_2.elf.map  main_core_0_2.elf.sdr  main_core_0_2.ll  main_core_0_2.o.lst  main_design.bif
aiesim-bridge/: CMakeLists.txt
aiesim-bridge/include/: xdna_aiesim_bridge.h
aiesim-bridge/src/: addr_remap.h  aiesim_top.cpp  aiesim_top.h  bcast_bridge.cpp  bcast_bridge.h  c_abi.cpp  cdo_replay.cpp  cdo_replay.h  cluster_clone_patch.cpp  cluster_clone_patch.h  ddr_target.cpp  ddr_target.h  npu_replay.cpp  npu_replay.h  ps_bridge.cpp  ps_bridge.h  sc_bootstrap.cpp  service_thread.cpp  service_thread.h
aiesim-bridge/validation/: hal_validate.cpp
bridge-runner/: CMakeLists.txt  README.md  bridge-trace-runner.cpp  hwctx_slot.cpp  hwctx_slot.h
build_helpers/: codegen.rs  cpp_switch.rs  element_type_logic.rs  extract.rs  mod.rs  records.rs  semantics.rs
crates/xdna-archspec/: Cargo.toml  build.rs
crates/xdna-archspec/build_helpers/: bytecode.rs  codegen.rs  cpp_switch.rs  element_type_logic.rs  extract.rs  records.rs  semantics.rs
crates/xdna-archspec/data/: skew_constants.json
crates/xdna-archspec/decoder_ffi/: AIE2GenRegisterEnum.inc  AIE2RegisterDecoderTables.inc  aie2_decoder.cpp  aie2_decoder.h
crates/xdna-archspec/examples/: gen_coverage_artifacts.rs
crates/xdna-archspec/src/: device_model.rs  elf.rs  lib.rs  model_builder.rs  regdb.rs  regdb_extractor.rs  runtime.rs  skew_ingest.rs  tablegen.rs  topology.rs  types.rs
crates/xdna-archspec/src/aie2/: async_errors.rs  dma.rs  isa_execute_model.rs  locks.rs  matmul.rs  memory_map.rs  mod.rs  permute.rs  registers.rs  rounding.rs  stream_switch.rs  stream_switch_model.rs  subsystems.rs  topology.rs  trace_events.rs  ups.rs
crates/xdna-archspec/src/aie2/aiert/: mod.rs
crates/xdna-archspec/src/aie2/isa/: decoder_bytecode.rs  decoder_ffi.rs  decoder_tables.rs  element_type_logic.rs  mod.rs  types.rs
crates/xdna-archspec/src/aie2/isa/resolver/: mod.rs  operand_classification.rs  semantic_inference.rs
crates/xdna-archspec/src/aie2/vmac/: mod.rs  routing.rs
crates/xdna-archspec/src/coverage/: artifacts.rs  build_gate.rs  derive.rs  enforce.rs  mod.rs  spine_ids.rs  subsystem.rs  surface.rs  units.rs  verdict.rs
crates/xdna-archspec/src/dma/: field_layouts.rs  layouts.rs  layouts_tests.rs  mod.rs
crates/xdna-archspec/src/isa_execute/: mod.rs
crates/xdna-archspec/src/locks/: mod.rs  tests.rs
crates/xdna-archspec/src/stream_switch/: mod.rs
crates/xdna-emu-ffi/: Cargo.toml
crates/xdna-emu-ffi/src/: async_errors.rs  backend.rs  classify.rs  config.rs  context.rs  execution.rs  firmware.rs  lib.rs  memory.rs  query.rs
crates/xdna-emu-ffi/src/aiesim/: abi.rs  backend.rs  bridge.rs  mod.rs
crates/xdna-emu-ffi/tests/: aiesim_bf16_nan_probe.rs  aiesim_ctrl_packet.rs  aiesim_e2e.rs  aiesim_h4_probe.rs  aiesim_sweep.rs  context_accessor.rs  max_cycles.rs  tier_c_completeness.rs  tier_c_wedge.rs
crates/xdna-graph/: Cargo.toml
crates/xdna-graph/src/: device_model.rs  lib.rs  regdb.rs  regdb_extractor.rs
data/: hw-shim-throughput-2026-05-25-fit.json  hw-shim-throughput-2026-05-25.csv
decoder_ffi/: AIE2CustomDecoders.inc  AIE2GenDisassemblerTables.inc  aie2_decoder.cpp  aie2_decoder.h
docs/: 2026-06-27-project-status-consolidation.md  README.md  aiesimulator.md  device-model-audit.md  direction-audit-20260224.md  dma-audit-2026-01-04.md  dma-reference.md  driver-diagnostics.md  fuzzer-usage.md  graph-source-map.md  known-fidelity-gaps.md  next-steps-2026-02-26.md  observability-leads.md  operations.md  pipeline-cleanup.md  plan-trace-unification.md  programmatic-sources.md  riallto-viz-reference.md  toolchain-sources.md  upstream-mlir-aie-issues.md  vitis-ide.md
examples/: bdd_validate.rs  capture_npu_outputs.rs  check_le_squash.rs  compare_emu_hw.rs  debug_add314.rs  debug_add_one.rs  (+11 more)
mock_xrt/: CMakeLists.txt
mock_xrt/include/: test_utils.h
mock_xrt/include/xrt/: xrt_bo.h  xrt_device.h  xrt_hw_context.h  xrt_kernel.h  xrt_uuid.h  xrt_xclbin.h
mock_xrt/include/xrt/deprecated/: xrt.h
mock_xrt/include/xrt/detail/: bitmask.h  config.h  ert.h  pimpl.h  xrt_mem.h
mock_xrt/include/xrt/experimental/: xrt_elf.h  xrt_ext.h  xrt_hw_context.h  xrt_kernel.h  xrt_module.h  xrt_xclbin.h
mock_xrt/scripts/: run_mlir_aie_tests.sh
mock_xrt/src/: bo.cpp  device.cpp  emulator_bridge.cpp  emulator_bridge.h  experimental.cpp  hw_context.cpp  kernel.cpp  xclbin.cpp
mock_xrt/tests/: simple_test.cpp
tools/aie-reg-probe/: CMakeLists.txt  main.cpp
tools/npu-runner/: CMakeLists.txt  npu_runner.cpp
tools/rw-access-probe/: CMakeLists.txt  rw-access-probe.cpp  rw-dispatch-probe.cpp
tools/telemetry-probe/: CMakeLists.txt  telemetry-probe.cpp
tools/txn-poll-probe/: CMakeLists.txt  txn-poll-probe.cpp
tools/validate-readback/: CMakeLists.txt  README.md  validate-readback.cpp
xrt-plugin/: CMakeLists.txt  xrt_driver_emu.map
xrt-plugin/src/: drv_emu.cpp  drv_emu.h  emu_debug.h  emu_ert_decode.h  hwctx_stubs.cpp  pdev_emu.cpp  pdev_emu.h  platform_emu.cpp  platform_emu.h  stub.cpp  transport.h  transport_inprocess.cpp  transport_inprocess.h  umq_stubs.cpp
(+5820 files in other folders)
