[package]
name = "xdna-emu"
version = "0.1.0"
edition = "2021"
description = "Open-source emulator and visual debugger for AMD XDNA NPUs"
license = "Unlicense"
rust-version = "1.70"

[lib]
# Build both a Rust library and a C-compatible shared library
# The cdylib (libxdna_emu.so) provides FFI for mock XRT integration
crate-type = ["lib", "cdylib"]
# Doc tests are enabled but should be run via scripts/run-tests.sh for nice priority

[dependencies]
# Binary parsing
zerocopy = { version = "0.8", features = ["derive"] }  # Zero-copy struct parsing
nom = "8"                                               # Parser combinators for complex formats

# Error handling
thiserror = "2"                                         # Derive Error trait
anyhow = "1"                                            # Flexible error handling

# Utilities
memmap2 = "0.9"                                         # Memory-mapped file I/O
regex = "1"                                             # Regex for TableGen parsing
uuid = "1"                                              # UUID handling
smallvec = "1.13"                                       # Stack-allocated vectors for operands
byteorder = "1.5"                                       # Byte order utilities for binary parsing
dirs = "6"                                              # Platform-specific config directories

# Serialization (for test manifests)
serde = { version = "1", features = ["derive"] }
toml = "0.8"

# ELF parsing for core binaries
goblin = "0.10"

# GUI framework
eframe = "0.31"                                         # egui framework for native apps
egui_extras = { version = "0.31", features = ["image"] } # Extra widgets

# Logging
log = "0.4"
env_logger = "0.11"

[dev-dependencies]
hex = "0.4"                                             # Hex dump utilities for debugging

[profile.release]
lto = true
