[package]
name = "xdna-emu"
version = "0.1.0"
edition = "2021"
description = "Open-source emulator and visual debugger for AMD XDNA NPUs"
license = "Unlicense"
rust-version = "1.70"

[lib]
# Build both a Rust library and a C-compatible shared library
# The cdylib (libxdna_emu.so) provides FFI for mock XRT integration
crate-type = ["lib", "cdylib"]
# Doc tests are enabled but should be run via scripts/run-tests.sh for nice priority

[dependencies]
# Binary parsing
zerocopy = { version = "0.8", features = ["derive"] }  # Zero-copy struct parsing
nom = "8"                                               # Parser combinators for complex formats

# Error handling
thiserror = "2"                                         # Derive Error trait
anyhow = "1"                                            # Flexible error handling

# Utilities
memmap2 = "0.9"                                         # Memory-mapped file I/O
regex = "1"                                             # Regex for TableGen parsing
uuid = "1"                                              # UUID handling
smallvec = "1.13"                                       # Stack-allocated vectors for operands
byteorder = "1.5"                                       # Byte order utilities for binary parsing
dirs = "6"                                              # Platform-specific config directories
crossterm = "0.29"                                       # Terminal control for build progress grid
libc = "0.2"                                              # POSIX FFI: setsid, killpg for process control
sha2 = "0.10"                                             # SHA256 for trace staleness checking

# Serialization (for test manifests and register database)
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# ELF parsing for core binaries
goblin = "0.10"

# GUI framework
eframe = "0.31"                                         # egui framework for native apps
egui_extras = { version = "0.31", features = ["image"] } # Extra widgets

# Logging
log = "0.4"
env_logger = "0.11"

[features]
default = []
# Enable integration tests that require built mlir-aie test binaries (xclbin files).
# Build binaries first: ./scripts/build-mlir-aie-tests.sh
# Run tests: cargo test --features xclbin-tests
xclbin-tests = []
# Enable hardware cross-validation tests (emulator vs real NPU).
# Requires: built test binaries + captured NPU outputs in tests/npu-outputs/
# Capture first: cargo run --example capture_npu_outputs
# Run tests: cargo test --features hardware-compare
hardware-compare = []

[build-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
hex = "0.4"                                             # Hex dump utilities for debugging

[[bin]]
name = "npu-test"
path = "src/bin/npu_test.rs"

[[bin]]
name = "trace-compare"
path = "src/bin/trace_compare.rs"

[profile.release]
lto = true
