[package]
name = "xdna-archspec"
version = "0.1.0"
edition = "2021"
description = "NPU architecture specification -- validated hardware model extracted from the open-source toolchain"
license = "MIT"
build = "build.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"

[build-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tempfile = "3"
