[package]
name = "xdna-archspec"
version = "0.1.0"
edition = "2021"
description = "NPU architecture specification -- validated hardware model extracted from the open-source toolchain"
license = "MIT"
build = "build.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"

[build-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Used by build_helpers/ (TableGen extraction -> gen_tablegen.rs).
tblgen = { git = "https://github.com/FIM43-Redeye/tblgen-rs.git", branch = "feat/varbit-init", default-features = false, features = ["llvm21-0"] }
# Used by compile_llvm_decoder_ffi (compiles decoder_ffi/aie2_decoder.cpp).
cc = "1"

[dev-dependencies]
tempfile = "3"
