[package]
name = "xdna-graph"
version = "0.1.0"
edition = "2021"
description = "NPU architecture graph -- queryable hardware model extracted from the open-source toolchain"
license = "Unlicense"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tempfile = "3"
